--- a/toggel dark mode/style.css
+++ b/toggel dark mode/style.css
@@ -18,29 +18,37 @@ body {
 }
 
 body.dark {
-  background-color: black;
+  background-color: #333;
   color: #fff;
 }
 
 .container {
+  background-color: #ccc;
+  width: 80px;
+  height: 40px;
+  border-radius: 20px;
   position: fixed;
   top: 10px;
   right: 10px;
 }
 
 label {
-  background-color: black;
+  background-color: #333;
   width: 40px;
   height: 40px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  position: absolute;
+  right: 0;
   display: inline-block;
   border-radius: 50%;
   cursor: pointer;
   user-select: none;
-  transition: background 0.3s linear;
+  transition: background 0.3s linear, right 0.3s linear;
 }
 
 body.dark label {
   background-color: #fff;
+  right: 40px;
 }
 
 input {
